// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordForm should match snapshot 1`] = `
<Form>
  <FormSubHeading>
    Please enter your email address to reset your password
  </FormSubHeading>
  <Grid>
    <GridItem>
      <Input
        dataTest="email"
        id="email"
        labelText="Email"
        name="email"
        type="email"
      />
    </GridItem>
  </Grid>
  <FlexContainerResponsive>
    <Button
      disabled={false}
      loading={true}
      type="submit"
      variant="primary"
    >
      Submit
    </Button>
  </FlexContainerResponsive>
</Form>
`;

exports[`ForgotPasswordForm should match snapshot 2`] = `
<Form>
  <FormSubHeading>
    Please enter your email address to reset your password
  </FormSubHeading>
  <Grid>
    <GridItem>
      <Input
        dataTest="email"
        id="email"
        labelText="Email"
        name="email"
        type="email"
      />
    </GridItem>
  </Grid>
  <Alert
    message="Your forgotten password request has failed. Please try again or contact our support desk"
    type="danger"
  />
  <FlexContainerResponsive>
    <Button
      disabled={false}
      loading={true}
      type="submit"
      variant="primary"
    >
      Submit
    </Button>
  </FlexContainerResponsive>
</Form>
`;

exports[`ForgotPasswordForm should match snapshot 3`] = `<Component />`;

exports[`SuccessForgetPasswordContent should match snapshot 1`] = `
<FlexContainerBasic
  centerContent={true}
  flexColumn={true}
  hasPadding={true}
>
  <H5
    isCentered={true}
  >
    Success
  </H5>
  <span>
    Please check your inbox for an email we have just sent you with instructions for how to reset your password.
  </span>
  <br />
  <Link
    to="/developer/login"
  >
    Click here to return to the login page
  </Link>
</FlexContainerBasic>
`;
